GVT-2010 Fix map component z-index issues

--- a/ui/src/tool-bar/tool-bar.scss
+++ b/ui/src/tool-bar/tool-bar.scss
@@ -9,7 +9,7 @@
     grid-column: 1 / -1;
     display: flex;
     background: $color-white-dark;
-    z-index: 5;
+    margin-bottom: 1px;
 
     &--draft {
         background: $color-blue-lighter;
